Item Cooldown - Initial ItemStack support